--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
   <p class="cred"><button class="start-camera">Start Camera</button> Made by Wes Bos. <a
-      href="https://github.com/wesbos/check-my-hair">[source]</a></p>
+      href="https://github.com/wesbos/check-my-hair">[source]</a>, <a
+      href="https://github.com/johnhwhite/check-my-hair">[modified]</a></p>
   <input type="checkbox" id="mirror" class="mirror">
   <div class="wrap">
     <p class="text">
